@@ -1,5 +1,9 @@
-2008/06/23
+2008/06/24
+
+	43. In hppVisRdmBuilder::buildOneStep, if shooter fails, return KD_ERROR.
 	
+2008/06/23
+		
 	42. Fixed a bug in copy constructor of CflicDirectPath.
 	
 2008/06/18
